Per #218, fix the description of the Quick Study talent

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -487,6 +487,7 @@
     "Construct.other.specialRules": "Special Rules",
     "Construct.other.species": "Species",
     "Construct.other.speciesAbility": "Species Ability",
+    "Construct.other.starshipType": "Starship Type",
     "Construct.other.stats": "Stats",
     "Construct.other.stress": "Stress",
     "Construct.other.systems": "Systems",
@@ -1003,10 +1004,12 @@
     "ExtraType.zaraniteMask": "Zaranite Breather Mask",
     "ExtraType.ferengiHeadFlap": "Ferengi Head Flap",
 
+    "Focus.advancedHolograms": "Advanced Holograms",
     "Focus.ambushTactics": "Ambush Tactics",
     "Focus.animalHandling": "Animal Handling",
     "Focus.anthropology": "Anthropology",
     "Focus.art": "Art",
+    "Focus.artificialIntelligenceSystems": "Artificial Intelligence Systems",
     "Focus.astrometrics": "Astrometrics",
     "Focus.astronavigation": "Astronavigation",
     "Focus.astronomy": "Astronomy",
@@ -1043,20 +1046,25 @@
     "Focus.deception": "Deception",
     "Focus.decisiveLeadership": "Decisive Leadership",
     "Focus.deflectorOperations": "Deflector Operations",
+    "Focus.deflectorSystems": "Deflector Systems",
     "Focus.demolition": "Demolition",
+    "Focus.diagnostics": "Diagnostics",
     "Focus.diplomacy": "Diplomacy",
     "Focus.disguise": "Disguise",
     "Focus.disruptors": "Disruptors",
     "Focus.efficientEvasion": "Efficient Evasion",
     "Focus.electroPlasmaPowerSystems": "Electro-Plasma Power Systems",
     "Focus.emergencyMedicine": "Emergency Medicine",
+    "Focus.emergencyRepairs": "Emergency Repairs",
     "Focus.emotionalIntelligence": "Emotional Intelligence",
+    "Focus.energyWeapons": "Energy Weapons",
     "Focus.espionage": "Espionage",
     "Focus.etiquette": "Etiquette",
     "Focus.evacuationProcedures": "Evacuation Procedures",
     "Focus.evasiveAction": "Evasive Action",
     "Focus.exoTectonics": "Exo-tectonics",
     "Focus.extraVehicularActivity": "Extra-Vehicular Activity",
+    "Focus.evaSuits": "EVA Suits",
     "Focus.finances": "Finances",
     "Focus.fleetFormations": "Fleet Formations",
     "Focus.flightController": "Flight Controller",
@@ -2194,7 +2202,11 @@
 
     "Talent.quickStudy": "Quick Study",
 
-    "Talent.quickStudy.description": "You have a way of getting a good impression of a situation with only a moment’s observation. At the start of a scene, you may immediately ask one question, as if you had spent one Momentum on the Obtain Information Momentum spend. The answer can only provide information that you could obtain with your own senses; you cannot gain information from equipment in so short a time.",
+    "Talent.quickStudy.description": "When attempting a Task that will involve an unfamiliar medical procedure, or which is to treat an unfamiliar species, ignore any Difficulty increase stemming from your unfamiliarity.",
+
+    "Talent.quickSurvey": "Quick Survey",
+
+    "Talent.quickSurvey.description": "You have a way of getting a good impression of a situation with only a moment’s observation. At the start of a scene, you may immediately ask one question, as if you had spent one Momentum on the Obtain Information Momentum spend. The answer can only provide information that you could obtain with your own senses; you cannot gain information from equipment in so short a time.",
 
     "Talent.fieldMedicine": "Field Medicine",
 
