--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -1756,7 +1756,7 @@
 
     "Talent.quickStudy": "Etude rapide",
 
-    "Talent.quickStudy.description": "Vous savez estimer une situation en un clin d'oeil. Au début d'une scène, vous pouvez immédiatement et gratuitement poser une question, comme si vous aviez dépensé un point d'impulsion. La réponse ne peut vous donner que des informations que vous pourriez obtenir par vospropres sens. Vous ne pouvez obtenir d'information d'un équipement en un si court laps de temps. ",
+    "Talent.quickSurvey.description": "Vous savez estimer une situation en un clin d'oeil. Au début d'une scène, vous pouvez immédiatement et gratuitement poser une question, comme si vous aviez dépensé un point d'impulsion. La réponse ne peut vous donner que des informations que vous pourriez obtenir par vospropres sens. Vous ne pouvez obtenir d'information d'un équipement en un si court laps de temps. ",
 
     "Talent.fieldMedicine": "Médecine de terrain",
 
