--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -484,7 +484,7 @@
     "Construct.attribute.control": "Contrôle",
     "Construct.attribute.daring": "Audace",
     "Construct.attribute.fitness": "Forme Physique",
-    "Construct.attribute.insight": "Perspicacité",
+    "Construct.attribute.insight": "Intuition",
     "Construct.attribute.presence": "Présence",
     "Construct.attribute.reason": "Raison",
 
@@ -856,9 +856,12 @@
     "ExtraType.zaraniteMask": "Respirateur Zaranite",
     "ExtraType.ferengiHeadFlap": "Voilette Ferengi",
 
+    "Focus.advancedHolograms": "Hologrammes avancés",
+    "Focus.ambushTactics": "Tactiques d'embuscade",
     "Focus.animalHandling": "Comportement animal",
     "Focus.anthropology": "Anthropologie",
     "Focus.art": "Art",
+    "Focus.artificialIntelligenceSystems": "Systèmes d'intelligence artificielle",
     "Focus.astrometrics": "Astrométrique",
     "Focus.astronavigation": "Astronavigation",
     "Focus.astronomy": "Astronomy",
@@ -866,41 +869,59 @@
     "Focus.atmosphericFlight": "Vol Atmosphérique",
     "Focus.attackRun": "Charge",
     "Focus.bargain": "Marchandage",
+    "Focus.bladeWeapons": "Armes tranchantes",
     "Focus.botany": "Botanique",
     "Focus.boatPilotSubmersibles": "Pilotage de bateau / sous-marin",
     "Focus.bureaucracy": "Bureaucracie",
     "Focus.callToAction": "Motivation",
+    "Focus.camouflage": "Camouflage",
     "Focus.climbing": "Escalade",
+    "Focus.chemicalAndBiologicalWeapons": "Armes Chimiques et Biologiques",
     "Focus.coldReading": "Lecture à froid",
     "Focus.combatManeuvers": "Manoeuvres de combat",
+    "Focus.combatMedic": "Medecine de combat",
     "Focus.communicationsSystems": "Systemes de communication",
     "Focus.composure": "Maitrise de soi",
     "Focus.computers": "Informatique",
+    "Focus.computerSecuritySystems": "Systèmes de sécurité informatique",
     "Focus.coordinatedEfforts": "Coordination des efforts",
     "Focus.courtingRituals": "Rituels de séduction",
     "Focus.coveringAdvance": "Avance de couverture",
+    "Focus.criminalMinds": "Esprits criminels",
+    "Focus.criminalOrganizations": "Organisations criminelles",
+    "Focus.crisisManagement": "Gestion de crise",
     "Focus.culturalExpert": "Expert culturel",
     "Focus.culturalStudies": "Etudes culturelles",
     "Focus.cybernetics": "Cybernetique",
+    "Focus.deadeyeMarksman": "Tireur d'élite",
     "Focus.debate": "Débat",
     "Focus.deception": "Tromperie",
     "Focus.decisiveLeadership": "Commandement décisif",
+    "Focus.deflectorOperations": "Utilisation des deflecteurs",
+    "Focus.deflectorSystems": "Systèmes déflecteurs",
     "Focus.demolition": "Démolition",
+    "Focus.diagnostics": "Diagnostics",
     "Focus.diplomacy": "Diplomacie",
     "Focus.disguise": "Déguisement",
     "Focus.disruptors": "Disrupteurs",
     "Focus.efficientEvasion": "Efficacité d'évasion",
     "Focus.electroPlasmaPowerSystems": "Systèmes d'Alimentations Electro-Plasmiques",
     "Focus.emergencyMedicine": "Médecine d'Urgence",
+    "Focus.emergencyRepairs": "Réparations d'urgence",
     "Focus.emotionalIntelligence": "Intelligence émotionnelle",
+    "Focus.energyWeapons": "Armes à énergie",
     "Focus.espionage": "Espionnage",
     "Focus.etiquette": "Etiquette",
     "Focus.evacuationProcedures": "Procédures d'évacuation",
     "Focus.evasiveAction": "Action d'évasion",
     "Focus.exoTectonics": "Exo-tectonique",
     "Focus.extraVehicularActivity": "Activités Extra-Vehiculaires ",
+    "Focus.evaSuits": "Combinaisons  Extra-Véhiculaires",
     "Focus.finances": "Finances",
+    "Focus.fleetFormations": "Formation en vol",
     "Focus.flightController": "Contrôleur de vol",
+    "Focus.forensics": "Médecine légale",
+    "Focus.forgery": "Contrefaçon",
     "Focus.gambling": "Pari",
     "Focus.genetics": "Genetique",
     "Focus.geology": "Géologie",
@@ -909,6 +930,8 @@
     "Focus.guidanceSystems": "Systèmes de guidage",
     "Focus.handPhasers": "Phaseurs de Poing",
     "Focus.handToHandCombat": "Combat à mains nues",
+    "Focus.hazardousEnvironments": "Environnements dangereux",
+    "Focus.heavyCover": "Couverture lourde",
     "Focus.helmOperation": "Timonerie",
     "Focus.history": "Histoire",
     "Focus.holoprogramming": "Holoprogrammation",
@@ -919,27 +942,38 @@
     "Focus.intimidation": "Intimidation",
     "Focus.impulseEngines": "Moteurs a impulsion",
     "Focus.journalism": "Journalisme",
+    "Focus.klingonWeapons": "Armes Kilngonnes",
     "Focus.law": "Droit",
+    "Focus.lawEnforcement": "Application des loi",
     "Focus.leadByExample": "Montrer l'exemple",
+    "Focus.leadInvestigator": "Enquêteur chef",
     "Focus.linguistics": "Linguistique",
     "Focus.manufacturing": "Fabrication",
+    "Focus.martialArts": "Arts martiaux",
     "Focus.mentalDiscipline": "Discipline mentale",
+    "Focus.mentalResistanceTechniques": "Techniques de résistance mentale",
     "Focus.metallurgy": "Metallurgie",
     "Focus.multiDiscipline": "Multi-Discipline",
     "Focus.multiTasking": "Organisation Multi Tache",
     "Focus.music": "Musique",
     "Focus.negotiation": "Négotiation",
     "Focus.observation": "Observation",
+    "Focus.organizationalPsychology": "Psychologie des organisations",
     "Focus.oratory": "Orateur",
     "Focus.pathfinder": "Eclaireur",
+    "Focus.patrol": "Patrouille",
     "Focus.performer": "Artiste de spectacle",
     "Focus.persuasion": "Persuasion",
+    "Focus.phasers": "Phasers",
     "Focus.philosophy": "Philosophie",
     "Focus.physics": "Physique",
+    "Focus.pickpocketing": "Pickpocket",
+    "Focus.planetarySurveys": "Etudes des planètes",
     "Focus.politics": "Politique",
     "Focus.powerManagement": "Gestion de l'énergie",
     "Focus.powerSystems": "Systèmes d'alimentation",
     "Focus.precisionManeuvering": "Manoeuvres de précision",
+    "Focus.precisionTargeting": "Ciblage de précision",
     "Focus.primeDirective": "Directive première",
     "Focus.psychiatry": "Psychiatrie",
     "Focus.psychology": "Psychologie",
@@ -948,8 +982,11 @@
     "Focus.repairsAndMaintenance": "Réparations et maintenance",
     "Focus.reportingProcedures": "Procédures d'établissement de rapports",
     "Focus.rhetoric": "Réthorique",
+    "Focus.securitySystems": "Systèmes de sécurité ",
     "Focus.shipboardTacticalSystems": "Systèmes Tactiques de Bord",
     "Focus.shipDesignAndConstruction": "Construction et conception de vaisseaux",
+    "Focus.shipEngagementTactics": "Tactiques de combat spatial",
+    "Focus.shipLockdownProcedures": "Procédures de confinement des vaisseaux",
     "Focus.shuttlebayManagement": "Gestion de hangars à navettes",
     "Focus.smallCraft": "Petit Vaisseau",
     "Focus.spaceStationOperations": "Opérations de stations spatiales",
@@ -958,6 +995,7 @@
     "Focus.starshipRecognition": "Reconnaissance des Vaisseaux",
     "Focus.starfleetProtocols": "Protocoles de Starfleet ",
     "Focus.stationOperations": "Opérations de stations",
+    "Focus.strategy": "Stratégie",
     "Focus.strategyTactics": "Stratégie / Tactique",
     "Focus.stellarCartography": "Cartographie stellaire.",
     "Focus.strafingRun": "Mitraillage",
@@ -967,10 +1005,12 @@
     "Focus.surgery": "Chirurgie",
     "Focus.survey": "Enquête",
     "Focus.survival": "Survie",
+    "Focus.targetingSystems": "Systèmes de visée",
     "Focus.teaching": "Enseignement",
     "Focus.teamDynamics": "Dynamique d'équipe",
     "Focus.threatAnalysis": "Analyse des Menaces",
     "Focus.timeManagement": "Gestion du temps",
+    "Focus.torpedoes": "Torpilles",
     "Focus.tracking": "Pistage",
     "Focus.traumaSurgery": "Chirurgie Traumatique",
     "Focus.transportersReplicators": "Transporteurs & Réplicateurs",
