Additional 2nd edition support

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -430,6 +430,8 @@
     "Construct.other.values": "Überzeugungen",
     "Construct.other.weapons": "Waffen",
 
+    "Construct.assetStat.science": "Wissenschaft",
+
     "Construct.attribute.control": "Konzentration",
     "Construct.attribute.daring": "Wagemut",
     "Construct.attribute.fitness": "Fitness",
