--- a/WebTools/src/i18n/locales/pt-BR/translations.json
+++ b/WebTools/src/i18n/locales/pt-BR/translations.json
@@ -465,6 +465,8 @@
     "Construct.other.values": "Valores",
     "Construct.other.weapons": "Armas",
 
+    "Construct.assetStat.science": "Ciência",
+
     "Construct.attribute.control": "Controle",
     "Construct.attribute.daring": "Audácia",
     "Construct.attribute.fitness": "Físico",
