--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -376,6 +376,8 @@
     "Construct.other.values": "Ценности",
     "Construct.other.weapons": "Оружие",
 
+    "Construct.assetStat.science": "Наука",
+
     "Construct.attribute.control": "Самоконтроль",
     "Construct.attribute.daring": "Решительность",
     "Construct.attribute.fitness": "Физподготовка",
